[tool.poetry]
name = "what-todo-python"
version = "0.1.0"
description = ""
authors = ["Ron Southwick <ronlsouthwick@gmail.com>"]
readme = "README.md"
packages = [{include = "todo"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
