[tool.poetry]
name = "what-todo-python"
version = "0.1.0"
description = ""
authors = ["Ron Southwick <ronlsouthwick@gmail.com>"]
readme = "README.md"
packages = [{include = "todo"}]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.7.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
